@@ -316,19 +316,18 @@ which builds a query to search a single field::
 
   >>> q = conn.query_field('text', 'create a paragraph')
   >>> str(q)
-  'Xapian::Query((ZXBcreat:(pos=1) AND ZXBa:(pos=2) AND ZXBparagraph:(pos=3)))'
+  'Xapian::Query(((ZXBcreat:(pos=1) AND ZXBa:(pos=2) AND ZXBparagraph:(pos=3)) AND_MAYBE (XBcreate:(pos=1) AND XBa:(pos=2) AND XBparagraph:(pos=3))))'
 
 As you can see, the str() function will display the underlying Xapian query
 which is generated by the search connection.  This may look a little weird at
-first, but you can get a general idea of the shape of the query: in this case,
-we have three terms which are combined together with an "AND" operator.
+first, but you can get a general idea of the shape of the query.
 
 The default operator for searches is "AND", but if we wish to be a little wider
 in our search, we can use the "OR" operator instead::
 
   >>> q = conn.query_field('text', 'create a paragraph', default_op=conn.OP_OR)
   >>> str(q)
-  'Xapian::Query((ZXBcreat:(pos=1) OR ZXBa:(pos=2) OR ZXBparagraph:(pos=3)))'
+  'Xapian::Query(((ZXBcreat:(pos=1) OR ZXBa:(pos=2) OR ZXBparagraph:(pos=3)) AND_MAYBE (XBcreate:(pos=1) OR XBa:(pos=2) OR XBparagraph:(pos=3))))'
 
 Once we have a query, we can use it to get a set of search results.  Xapian is
 optimised for situations where only a small subset of the total result set is
@@ -423,7 +422,7 @@ method, to filter the results of an existing query::
 
   >>> filtered_query = conn.query_filter(q, rq)
   >>> print filtered_query
-  Xapian::Query(((ZXBcreat:(pos=1) OR ZXBa:(pos=2) OR ZXBparagraph:(pos=3)) FILTER VALUE_RANGE 1 20000101 20010101))
+  Xapian::Query((((ZXBcreat:(pos=1) OR ZXBa:(pos=2) OR ZXBparagraph:(pos=3)) AND_MAYBE (XBcreate:(pos=1) OR XBa:(pos=2) OR XBparagraph:(pos=3))) FILTER VALUE_RANGE 1 20000101 20010101))
 
 .. Note:: The implementation of sorting and range filtering for floating point values uses terms which typically contain non-printable characters.  Don't panic if you call ``print`` on a query generated with ``query_range()`` and odd control-characters are displayed; it's probably normal.)
 
