@@ -1,3 +1,11 @@
+Wed Nov 28 08:15:09 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* docs/introduction.rst,xappy/indexerconnection_doctest2.txt,
+	  xappy/searchconnection.py,xappy/searchconnection_doctest2.txt:
+	  Modify query parsing to ensure that exact matches are given a
+	  higher weight than stemmed or synonym matches.  Update testcases
+	  accordingly.
+
 Wed Nov 28 07:34:21 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/: Update the xapian tarballs; these now include OP_SYNONYM
